# mtg-discord-utils

./: .gitignore  Dockerfile  Dockerfile_DB  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
magic_utils/: binary_search.py  client.py  command_decorator.py  create_cards_db.py  env.py  main.py  model.py  mtg.py  search.py  sort_cards.py  string_treatment.py
magic_utils/utils/: create_cards_db.py  create_jsons.py
