[tool.poetry]
name = "magic-utils"
version = "0.1.0"
description = ""
authors = ["Aloizio Macedo <aloiziomacedo@gmail.com>"]
readme = "README.md"
packages = [{include = "magic_utils"}]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^2.0.0"
aiohttp = "^3.8.3"
black = "^22.8.0"
flake8 = "^5.0.4"
pycodestyle = "^2.9.1"
mtgsdk = "^1.3.1"
certifi = "^2022.9.24"
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.4"
ipykernel = "^6.16.0"
jupyter = "^1.0.0"
python-Levenshtein = "^0.20.5"
rapidfuzz = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = "magic_utils"
